src/test/resources/parse/InvalidModifierSequence.casc
mut priv class InvalidModifierSequence

impl InvalidModifierSequence {
    mut ovrd fn a1(self) {}

    ovrd priv fn a2() {}
}